--- a/basics.vcxproj.filters
+++ b/basics.vcxproj.filters
@@ -5,6 +5,17 @@
     <ClCompile Include="template\template.cpp">
       <Filter>template</Filter>
     </ClCompile>
+    <ClCompile Include="main.cpp" />
+    <ClCompile Include="surface.cpp" />
+    <ClCompile Include="sprite.cpp" />
+    <ClCompile Include="glad.c" />
+    <ClCompile Include="jobmanager.cpp" />
+    <ClCompile Include="gltexture.cpp" />
+    <ClCompile Include="glshader.cpp" />
+    <ClCompile Include="helpers.cpp" />
+    <ClCompile Include="glhelpers.cpp" />
+    <ClCompile Include="rand.cpp" />
+    <ClCompile Include="pixel_ops.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="camera.h" />
@@ -18,6 +29,18 @@
     <ClInclude Include="template\precomp.h">
       <Filter>template</Filter>
     </ClInclude>
+    <ClInclude Include="app.h" />
+    <ClInclude Include="surface.h" />
+    <ClInclude Include="sprite.h" />
+    <ClInclude Include="gltexture.h" />
+    <ClInclude Include="glshader.h" />
+    <ClInclude Include="timer.h" />
+    <ClInclude Include="jobmanager.h" />
+    <ClInclude Include="aabb.h" />
+    <ClInclude Include="helpers.h" />
+    <ClInclude Include="glhelpers.h" />
+    <ClInclude Include="rand.h" />
+    <ClInclude Include="pixel_ops.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="template">
